--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -11,8 +11,7 @@ jobs:
   variables:
   - group: BUILD Management Resources
   steps:
-  # - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks - Needs uncommenting once in master.
-
+  - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
     parameters:
       ContinueOnVulnerablePackageScanError: true
