--- a/src/SFA.DAS.EmployerFeedback.Infrastructure/SFA.DAS.EmployerFeedback.Infrastructure.csproj
+++ b/src/SFA.DAS.EmployerFeedback.Infrastructure/SFA.DAS.EmployerFeedback.Infrastructure.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="RestEase" Version="1.6.4" />
     <PackageReference Include="SFA.DAS.Http" Version="3.2.69" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="9.0.8" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
 </Project>
