--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ resources:
   - pipeline: das-employer-config
     project: Digital Apprenticeship Service
     source: das-employer-config
-    branch: refs/heads/P2-2802-Employer_feedback_Jobs ## Needs updating once config is merged in to master.
+    branch: master
 
 stages:
 - stage: Build
