--- a/src/SFA.DAS.EmployerFeedback.Jobs/SFA.DAS.EmployerFeedback.Jobs.csproj
+++ b/src/SFA.DAS.EmployerFeedback.Jobs/SFA.DAS.EmployerFeedback.Jobs.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.5" />
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="17.1.138" />
     <PackageReference Include="RestEase.HttpClientFactory" Version="1.6.4" />
+    <PackageReference Include="SFA.DAS.Encoding" Version="1.1.76" />
     <PackageReference Include="System.Text.Json" Version="9.0.8" />
   </ItemGroup>
   <ItemGroup>
